[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/menu/Click.wav" type="AudioStream" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.5
margin_top = -34.0
margin_right = 61.5
margin_bottom = 34.0
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 123.0
margin_bottom = 20.0
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 123.0
margin_bottom = 44.0
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 123.0
margin_bottom = 68.0
text = "Quit"

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SoundEffects"

[node name="QuitTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="QuitTimer" to="." method="_on_QuitTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
